--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,15 @@
     "psr-4": {
       "DtoPacker\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10.5",
+    "phpstan/phpstan": "^2.1",
+    "friendsofphp/php-cs-fixer": "^3.89"
   }
 }
