--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^12.4.3",
-    "friendsofphp/php-cs-fixer": "^v3.89.2"
+    "phpunit/phpunit": "^10.5",
+    "friendsofphp/php-cs-fixer": "^3.89"
   }
 }
